--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "stoogin' the net"
+title = "data science portfolio"
 theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = ""
